Bug 330587 - Vertical object placement regression in sequence diagrams
Summary: Vertical object placement regression in sequence diagrams
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Compiled Sources All
: NOR normal
Target Milestone: ---
Assignee: Ralf Habacker
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-30 16:19 UTC by Ralf Habacker
Modified: 2014-02-19 07:24 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.13.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2014-01-30 16:19:07 UTC
In umbrello master branch the vertical placement of object widgets is broken compared to umbrello build from the 4.12 or 4.11 branch. 

Reproducible: Always

Steps to Reproduce:
1. open umbrello
2. create a sequence diagram
3. unselect snap to grid if selected
3. add objects
Actual Results:  
Object widgets are not placed vertical in line with already placed object widgets. Instead they are placed in a - hard to predict - location near the mouse pointer (also with snap to grid enabled)
After placing  the widget the vertical position cannot be corrected with the "Move Up" context menu entry, which was possible in 4.12. 


Expected Results:  
New object widgets should be vertical aligned to the other placed widgets and - after moving down through "Move down" context menu entry -  it should be be able to restore the initial vertical location through the "Move Up" context menu entry.
Comment 1 Ralf Habacker 2014-01-31 10:04:52 UTC
Git commit e4cab0f5ca900121d632b1b5e2d7e77bb25d321a by Ralf Habacker.
Committed on 31/01/2014 at 10:02.
Pushed by habacker into branch 'master'.

Fix of 'Vertical object placement regression in sequence diagrams'.

M  +5    -2    umbrello/umlscene.cpp

http://commits.kde.org/umbrello/e4cab0f5ca900121d632b1b5e2d7e77bb25d321a