Fix of 'Vertical object placement regression in sequence diagrams'.

BUG:330587